solved challenge, including mobile stretch goal

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,12 @@
 }
 
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +26,50 @@
 }
 
 .characterWrapper {
+  min-height: 500px;
+  width: 35%;
+  position: fixed;
+  top: 128px;
+  right: 0;
 }
 
 .controlColumn {
+  width: 50%;
+}
+
+.perspective {
+  position: fixed;
+  top: 50%;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: hsl(195deg, 20%, 86%);
+}
+
+@media screen and (max-width: 650px) {
+  .controlColumn {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    overflow-x: auto;
+    bottom: 10%;
+  }
+
+  .header {
+    width: 100%;
+  }
+
+  .characterEditor {
+    padding-top: 24px;
+  }
+  
+  .characterWrapper {
+    position: static;
+    min-height: 0;
+    width: auto;
+  }
+
+  .perspective {
+    display: none;
+  }
 }
