--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -24,3 +24,10 @@
   font-weight: 400;
   color: hsl(0deg, 0%, 30%);
 }
+
+@media screen and (max-width: 650px) {
+  .controlPane {
+    margin: 8px;
+    width: 350px;
+  }
+}
