--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,11 @@
 .footer {
-  position: relative;
+  position: sticky;
   padding: 64px;
   background: hsl(0deg, 0%, 5%);
   color: white;
   text-align: center;
 }
 
+.footer > a {
+  color: inherit;
+}
