--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,12 @@ body {
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 650px) {
+  body {
+    background-color: hsl(195deg, 20%, 86%);
+  };
+}
+
 /*
   A utility class to totally remove something from the screen,
   while still keeping it available for screen-readers.
